# openslam_falkolib

./: .gitignore  CMakeLists.txt  package.xml
include/falkolib/Common/: GeomUtils.h  LaserScan.h  logger.h
include/falkolib/Matching/: CCDAMatcher.h  NNMatcher.h
src/Feature/: FALKOExtractor.cpp
test/: falkobsc_scanmatcher.cpp  rbtpf.code-workspace  testKeypointFalko.cpp  testKeypointFalko_sintetic.cpp  test_data_sintetic.cpp  test_data_sintetic.h
