<?xml version="1.0"?>
<package>
  <name>falkolib</name>
  <version>0.0.1</version>
  <description>FalkoLib</description>

  <maintainer email="sebabedin@gmail.com">sbedin</maintainer>

  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
